--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
+# OpenTelemetry
 OTLP_EXPORTER_ENDPOINT=http://jaeger:4317
-SERVICE_NAME=your-service-name
-DATABASE_URL=postgresql://postgres:postgres@postgres:5432/orders_db
+SERVICE_NAME=service-name
+
+# Service URLs
+INVENTORY_SERVICE_URL=http://inventory-service:8000
+ORDER_SERVICE_URL=http://order-service:8000
+NOTIFICATION_SERVICE_URL=http://notification-service:8000
+
+# PostgreSQL Configuration
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=orders_db
+DATABASE_URL=postgresql://postgres:postgres@postgres:5432/orders
